Add attribution for webpage design in footer
Added attribution to the footer for webpage design.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <nav class="navbar">
         <div class="nav-container">
-            <div class="logo">novaa speed</div>
+            <div class="logo">Novaa Speed</div>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -24,7 +24,7 @@
 
     <section id="home" class="hero">
         <div class="hero-content fade-in">
-            <h1 class="glitch">novaa speed</h1>
+            <h1 class="glitch">Novaa Speed</h1>
             <p class="tagline">Where teenage innovators build tomorrow's startups</p>
             <div class="stats">
                 <div class="stat-item">
@@ -99,9 +99,11 @@
     <footer class="footer">
         <div class="container">
             <p>&copy; 2069 Novaa Speed. Empowering teenage entrepreneurs.</p>
+            <p> This Webpage is Fully Desinged and Created by Github user C0derdile, And Any Similar WebPage is a Pure Coincidence</p>
         </div>
     </footer>
 
     <script src="script.js"></script>
 </body>
+
 </html>
