--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <footer class="footer">
         <div class="container">
             <p>&copy; 2069 Novaa Speed. Empowering teenage entrepreneurs.</p>
-            <p> This Webpage is Fully Desinged and Created by Github user C0derdile, And Any Similar WebPage is a Pure Coincidence</p>
+            <p> This Webpage is Fully Desinged and Created by Github user gadhyan-hub, And Any Similar WebPage is a Pure Coincidence</p>
         </div>
     </footer>
 
@@ -107,3 +107,4 @@
 </body>
 
 </html>
+
